--- a/css/main.css
+++ b/css/main.css
@@ -29,6 +29,12 @@ li {
   list-style: none;
 }
 
+p {
+  font-family: "Inter", sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+}
+
 h1,
 h2,
 h3,
@@ -49,6 +55,19 @@ h2 {
   font-size: 72px;
 }
 
+h3 {
+  font-size: 60px;
+}
+
+h5 {
+  font-size: 48px;
+}
+
+.container ::-webkit-scrollbar {
+  width: 0;
+  background: transparent;
+}
+
 body {
   display: flex;
   overflow: hidden;
@@ -58,12 +77,13 @@ body {
   width: 100%;
   height: 100px;
   position: absolute;
-  top: 80px;
+  top: 10vh;
   left: 0;
+  z-index: 10;
 }
 .hdrWrap header {
   height: 100%;
-  width: 100%;
+  width: 90%;
   max-width: 1680px;
   margin: 0 auto;
   display: flex;
@@ -72,20 +92,19 @@ body {
   border-bottom: 5px solid gray;
 }
 .hdrWrap header h1 {
-  height: 100px;
+  height: 85px;
   width: 540px;
 }
 .hdrWrap header .emptyBox {
   height: 85px;
   width: calc(100% - 560px);
-  background: #fefefe;
+  background: #fdfdfd;
 }
 
 .menuWrap {
   height: 100vh;
   width: 670px;
-  padding-top: 40vh;
-  border: 1px solid green;
+  padding-top: 35vh;
   position: relative;
 }
 .menuWrap .menu {
@@ -93,7 +112,6 @@ body {
 }
 .menuWrap .menu h2 {
   line-height: 2;
-  border: 1px solid red;
 }
 .menuWrap .footer {
   position: absolute;
@@ -110,6 +128,33 @@ body {
   margin-top: 20vh;
   overflow: hidden;
   overflow-y: scroll;
+}
+.container .sectionIntro header h3 {
+  line-height: 80px;
+  margin-top: 80px;
+}
+.container .sectionIntro section {
+  margin-top: 100px;
+  text-align: center;
+}
+.container .sectionIntro section .texts {
+  text-align: left;
+  margin-top: 40px;
+}
+.menu h2 a {
+  transition: text-shadow 0.1s linear, color 0.1s;
+}
+.menu #menu1:hover {
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 20px 20px 0 rgb(0, 255, 255), -20px -20px 0 rgb(250, 0, 255);
+}
+.menu #menu2:hover {
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 20px 20px 0 rgb(250, 0, 255), -20px -20px 0 rgb(250, 255, 0), -19px -19px 0px rgb(230, 235, 0);
+}
+.menu #menu3:hover {
+  color: rgba(255, 255, 255, 0.7);
+  text-shadow: 20px 20px 0 rgb(250, 255, 0), 21px 21px 0px rgb(230, 235, 0), -20px -20px 0 rgb(0, 255, 255);
 }
 
 /*# sourceMappingURL=main.css.map */
