--- a/scss/_fonts.scss
+++ b/scss/_fonts.scss
@@ -1,6 +1,6 @@
-// (EN)     font-family: 'Cormorant Garamond', serif;
+// (EN)     font-family: 'Cormorant Garamond', serif;   300,500,700
 @import url("https://fonts.googleapis.com/css2?family=Cormorant+Garamond:ital,wght@0,300;0,500;0,700;1,300;1,500;1,700&display=swap");
-// (EN)     font-family: 'Inter', sans-serif;
+// (EN)     font-family: 'Inter', sans-serif;   200,400,700,800
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@200;400;700;800&display=swap");
 
 // (KR) 눈누- 수트  font-family: "SUIT-Regular";
