--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,4 +1,4 @@
-body {
+ body {
   display: flex;
   overflow: hidden;
 }
@@ -7,10 +7,11 @@ body {
   width: 100%;
   height: 100px;
   position: absolute;
-  top: 80px;
+  top: 10vh;
   left: 0;
+  z-index: 10;
   header {
-    @include box(100%);
+    @include box(100%, 90%);
     max-width: 1680px;
     margin: 0 auto;
     display: flex;
@@ -18,7 +19,7 @@ body {
     border-top: 10px solid black;
     border-bottom: 5px solid gray;
     h1 {
-      @include box(100px, 540px);
+      @include box(85px, 540px);
     }
     .emptyBox {
       @include box(85px, calc(100% - 560px));
@@ -29,14 +30,45 @@ body {
 
 .menuWrap {
   @include box(100vh, 670px);
-  padding-top: 40vh;
-  border: 1px solid green;
+  padding-top: 35vh;
   position: relative;
+  // .menuBG{
+  //   width: 100px;
+  //   height: 100px;
+  //   position: absolute;
+  //   top: 0; left: 0;
+  // }
+  // #right{
+  //   transform: skew(45deg);
+  //   background-image: linear-gradient(
+  //     0deg, 
+  //     rgba(155,155,155,0.3) 25%, 
+  //     transparent 25%, 
+  //     transparent 50%,
+  //     rgba(155,155,155,0.3) 50%, 
+  //     rgba(155,155,155,0.3) 75%, 
+  //     transparent 75%, 
+  //     transparent);
+  //   background-size: 5px 5px;
+  // }
+  // #left{
+  //   transform: skew(-90deg);
+  //   background-image: linear-gradient(
+  //     -90deg, 
+  //     rgba(155,155,155,0.3) 25%, 
+  //     transparent 25%, 
+  //     transparent 50%,
+  //     rgba(155,155,155,0.3) 50%, 
+  //     rgba(155,155,155,0.3) 75%, 
+  //     transparent 75%, 
+  //     transparent);
+  //   background-size: 5px 5px;
+  // }
+
   .menu {
     margin-left: 120px;
     h2 {
       line-height: 2;
-      border: 1px solid red;
     }
   }
   .footer {
@@ -55,5 +87,26 @@ body {
   overflow: hidden;
   overflow-y: scroll;
   .sectionIntro {
+    header {
+      h3 {
+        // height: 0;
+        // overflow: hidden;
+        line-height: 80px;
+        margin-top: 80px;
+      }
+    }
+    section {
+      margin-top: 100px;
+      text-align: center;
+      img {
+        // height: 0; overflow: hidden;
+
+      }
+      .texts {
+        text-align: left;
+        margin-top: 40px;
+        h5 {}
+      }
+    }
   }
 }
