--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -21,6 +21,12 @@ li {
   list-style: none;
 }
 
+p {
+  font-family: 'Inter', sans-serif;
+  font-size: 24px;
+  font-weight: 300;
+}
+
 h1,
 h2,
 h3,
@@ -38,4 +44,17 @@ h1 {
 }
 h2 {
   font-size: 72px;
+}
+h3 {
+  font-size: 60px;
+}
+h5 {
+  font-size: 48px;
+}
+
+.container {
+  ::-webkit-scrollbar {
+    width: 0;
+    background:transparent;
+  }
 }
