--- a/scss/main.scss
+++ b/scss/main.scss
@@ -6,3 +6,9 @@
 // @import "landing.scss";
 @import "index.scss";
 @import "menu.scss";
+
+// sections in order
+@import 'sectionMain.scss';
+@import 'sectionIntro.scss';
+@import 'sectionSkills.scss';
+@import 'sectionPortfolio.scss';
