--- a/css/main.css
+++ b/css/main.css
@@ -63,11 +63,6 @@ h5 {
   font-size: 48px;
 }
 
-.container ::-webkit-scrollbar {
-  width: 0;
-  background: transparent;
-}
-
 body {
   display: flex;
   overflow: hidden;
@@ -94,6 +89,22 @@ body {
 .hdrWrap header h1 {
   height: 85px;
   width: 540px;
+}
+.hdrWrap header h1 a:hover {
+  animation-name: colorChange;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+}
+@keyframes colorChange {
+  25% {
+    color: #01d1ff;
+  }
+  50% {
+    color: #fa00ff;
+  }
+  75% {
+    color: #faff00;
+  }
 }
 .hdrWrap header .emptyBox {
   height: 85px;
@@ -125,22 +136,87 @@ body {
 .container {
   height: 80vh;
   width: 1230px;
-  margin-top: 20vh;
+  margin-top: calc(20vh + 5px);
+  margin-left: 10px;
   overflow: hidden;
   overflow-y: scroll;
+  position: relative;
 }
-.container .sectionIntro header h3 {
-  line-height: 80px;
-  margin-top: 80px;
+.container::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 89%;
+  right: 50px;
+  border: 1px solid black;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
+  animation-name: scroller2;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
-.container .sectionIntro section {
-  margin-top: 100px;
-  text-align: center;
+@keyframes scroller2 {
+  0% {
+    top: 84%;
+    opacity: 0;
+  }
+  100% {
+    top: 88%;
+    opacity: 1;
+  }
 }
-.container .sectionIntro section .texts {
-  text-align: left;
-  margin-top: 40px;
+.container::after {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  top: 90%;
+  right: 50px;
+  border: 1px solid black;
+  border-top: none;
+  border-right: none;
+  transform: rotate(-45deg);
+  animation-name: scroller;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
 }
+@keyframes scroller {
+  0% {
+    top: 85%;
+    opacity: 0;
+  }
+  100% {
+    top: 90%;
+    opacity: 1;
+  }
+}
+
+#right {
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0.3;
+  background: repeating-linear-gradient(45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px);
+}
+
+#left {
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0.3;
+  background: repeating-linear-gradient(-45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px);
+}
+
 .menu h2 a {
   transition: text-shadow 0.1s linear, color 0.1s;
 }
@@ -155,6 +231,53 @@ body {
 .menu #menu3:hover {
   color: rgba(255, 255, 255, 0.7);
   text-shadow: 20px 20px 0 rgb(250, 255, 0), 21px 21px 0px rgb(230, 235, 0), -20px -20px 0 rgb(0, 255, 255);
+}
+
+.sectionMain {
+  width: calc(100% - 100px);
+}
+.sectionMain img {
+  width: 100%;
+}
+
+.sectionIntro {
+  margin-top: 120px;
+}
+.sectionIntro header h3 {
+  line-height: 80px;
+}
+.sectionIntro section {
+  margin-top: 100px;
+  text-align: center;
+}
+.sectionIntro section .texts {
+  text-align: left;
+  margin-top: 40px;
+}
+.sectionIntro section .texts h5 {
+  line-height: 1em;
+}
+.sectionIntro section .texts p {
+  text-indent: 1em;
+  margin-top: 20px;
+}
+
+.sectionSkills {
+  margin-top: 120px;
+}
+.sectionSkills section h5 {
+  text-indent: 1em;
+  line-height: 2em;
+}
+.sectionSkills section ul li {
+  text-indent: 2em;
+}
+.sectionSkills section ul li img {
+  height: 60px;
+}
+
+.sectionPortfolio {
+  margin-top: 120px;
 }
 
 /*# sourceMappingURL=main.css.map */
