--- a/scss/_menu.scss
+++ b/scss/_menu.scss
@@ -1,3 +1,23 @@
+#right {
+    position: absolute;
+    z-index: -10;
+    top: 0;left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #ffffff;
+    opacity: 0.3;
+    background: repeating-linear-gradient( 45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px );
+}
+#left {
+    position: absolute;
+    z-index: -10;
+    top: 0; left: 0;
+    width: 100%; height: 100%;
+    background-color: #ffffff;
+    opacity: 0.3;
+    background: repeating-linear-gradient( -45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px );
+}
+
 .menu {
     h2 {
         a{
