--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -5,7 +5,7 @@
 
 .hdrWrap {
   width: 100%;
-  height: 100px;
+  height: 10vh;
   position: absolute;
   top: 10vh;
   left: 0;
@@ -18,8 +18,9 @@
     justify-content: space-between;
     border-top: 10px solid black;
     border-bottom: 5px solid gray;
+    overflow: hidden;
     h1 {
-      @include box(85px, 540px);
+      @include box(85px, 30%);
 
       a {
         &:hover{
@@ -42,12 +43,13 @@
 }
 
 .menuWrap {
-  @include box(100vh, 670px);
-  padding-top: 35vh;
+  @include box(100vh, calc(1/3 * 100vw));
+  padding-top: 40vh;
   position: relative;
-
+  overflow: hidden;
   .menu {
-    margin-left: 120px;
+    width: calc(100% - 120px);
+    float: right;
     h2 {
       line-height: 2;
     }
@@ -55,22 +57,25 @@
   .footer {
     position: absolute;
     bottom: 5px;
-    left: 120px;
+    right: 0;
+    width: 80%;
     p {
       font-size: 16px;
     }
   }
 }
 
+// General Styling. Section Styling in sectionmain.scss
 .container {
-  @include box(80vh, 1230px);
-  margin-top: calc(20vh + 5px);
+  @include box(80vh, calc(2/3 * 100vw));
+  margin-top: 20vh;
   margin-left: 10px;
   overflow: hidden;
   overflow-y: scroll;
-  // scrollbar-width: none;
+  scrollbar-width: none;
   position: relative;
 
+  // Arrow Down animation
   &::before{
     content: '';
     position: absolute;
