--- a/scss/_sectionMain.scss
+++ b/scss/_sectionMain.scss
@@ -1,12 +1,17 @@
+div.allSection {
+  width: calc(100% - 120px);
+  &:not(:nth-of-type(1)){
+    margin-top: 160px;
+  }
+}
 .sectionMain {
-  width: calc(100% - 100px);
   img {
     width: 100%;
   }
 }
 
 .sectionIntro {
-  margin-top: 120px;
+  width: 100%;
   header {
     h3 {
       // height: 0;
@@ -35,13 +40,13 @@
 }
 
 .sectionSkills {
-  margin-top: 120px;
   header {
   }
   section {
     h5 {
       text-indent: 1em;
-      line-height: 2em;
+      line-height: 1em;
+      margin-top: 40px;
     }
     ul {
       li {
@@ -55,7 +60,6 @@
 }
 
 .sectionPortfolio {
-  margin-top: 120px;
   header {
   }
   section {
