--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -4,7 +4,8 @@
   box-sizing: border-box;
 }
 
-html,body {
+html,
+body {
   width: 100vw;
   height: 100vh;
   font-size: 60px;
@@ -20,15 +21,23 @@ ol,
 li {
   list-style: none;
 }
+img {
+  vertical-align: middle;
+}
 
+button {
+  font-family: "Inter", sans-serif;
+  font-size: 0.5em;
+  font-weight: 900;
+}
 p {
-  font-family: 'Inter', sans-serif;
+  font-family: "Inter", sans-serif;
   font-size: 24px;
   font-weight: 300;
 }
 li {
-  font-family: 'Inter', sans-serif;
-  font-size: 1em;
+  font-family: "Inter", sans-serif;
+  font-size: 0.8em;
   line-height: 1.2em;
 }
 
@@ -46,7 +55,6 @@ h6 {
 
 h1 {
   font-size: 72px;
-  
 }
 h2 {
   // font-size: 72px;
