--- a/scss/_sectionMain.scss
+++ b/scss/_sectionMain.scss
@@ -1,6 +1,6 @@
 div.allSection {
   width: calc(100% - 120px);
-  &:not(:nth-of-type(1)){
+  &:not(:nth-of-type(1)) {
     margin-top: 160px;
   }
 }
@@ -45,14 +45,18 @@ div.allSection {
   section {
     h5 {
       text-indent: 1em;
-      line-height: 1em;
+      line-height: 2em;
       margin-top: 40px;
     }
     ul {
+      display: flex;
+      flex-wrap: wrap;
+      row-gap: 40px;
       li {
-        text-indent: 2em;
+        padding-left: 5vw;
+        width: 50%;
         img {
-          height: 60px;
+          height: 100px;
         }
       }
     }
@@ -63,5 +67,55 @@ div.allSection {
   header {
   }
   section {
+    margin-top: 40px;
+    // border: 1px solid red;
+    .galleryProjects {
+      ul {
+        display: flex;
+        margin-top: 40px;
+        li {
+          width: 33.33%;
+          // border: 1px solid green;
+          padding: 0 20px;
+          a {
+            img {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+.sectionContact {
+  // border: 5px solid red;
+  text-align: center;
+  padding: 10vh 0;
+  header {
+    margin-bottom: 5vh;
+  }
+  section {
+    button {
+      @include box(8vh, 50%);
+      margin-top: 5vh;
+      overflow: hidden;
+      border: 5px solid black;
+      background-color: transparent;
+    }
+    .cyan {
+      box-shadow: 10px 10px 0 $cyan-rgba;
+    }
+    .magenta {
+      box-shadow: 10px 10px 0 $magenta-rgba;
+    }
+    .yellow {
+      box-shadow: 10px 10px 0 $yellow-rgba;
+    }
+    p {
+      margin-top: 10vh;
+      font-size: 60px;
+      font-weight: 900;
+    }
   }
 }
