--- a/css/main.css
+++ b/css/main.css
@@ -306,8 +306,8 @@ div.allSection:not(:nth-of-type(1)) {
   row-gap: 40px;
 }
 .sectionSkills section ul li {
-  padding-left: 5vw;
-  width: 50%;
+  width: 25%;
+  text-align: center;
 }
 .sectionSkills section ul li img {
   height: 100px;
