--- a/scss/_mixVariables.scss
+++ b/scss/_mixVariables.scss
@@ -12,10 +12,17 @@ $yellow-rgba: rgba(250, 255, 0, 1);
 $yellow-dark: rgba(230, 235, 0, 1);
 
 $text-dark: #313131;
-$text-dark2: rgba(0,0,0,0.3);
+$text-dark2: rgba(0, 0, 0, 0.3);
 $text-light: #fafafa;
-$text-light2: rgba(255,255,255,0.7);
+$text-light2: rgba(255, 255, 255, 0.7);
 
 $bg-white: #fdfdfd;
 $bg-light: #f9f9f9;
+$bg-black: #121212;
 $bg-dark: #3a3a3a;
+
+$gray-light: #c0c0c0;
+$gray-medium: #8a8a8a;
+$gray-dark: #545454;
+$gray-darker: #303030;
+$gray-darkest: #1f1f1f;
