--- a/css/main.css
+++ b/css/main.css
@@ -262,6 +262,84 @@ body {
   text-shadow: 20px 20px 0 rgb(250, 255, 0), 21px 21px 0px rgb(230, 235, 0), -20px -20px 0 rgb(0, 255, 255);
 }
 
+#flip {
+  height: 100vh;
+  width: 100vw;
+  background-color: #121212;
+}
+#flip .letters {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+#flip .letters p {
+  font-size: 15vw;
+  font-weight: bold;
+  font-weight: 700;
+  color: #fafafa;
+  line-height: 100vh;
+  letter-spacing: 5px;
+  transform: perspective(500px) rotateY(90deg);
+  animation: fliptext 5s ease-in-out 1 forwards;
+  opacity: 0;
+}
+#flip .letters #p2 {
+  animation-delay: 400ms;
+}
+#flip .letters #p3 {
+  animation-delay: 600ms;
+}
+#flip .letters #p4 {
+  animation-delay: 800ms;
+}
+#flip .letters #p5 {
+  animation-delay: 1000ms;
+}
+#flip .letters #p6 {
+  animation-delay: 1200ms;
+}
+#flip .letters #p7 {
+  animation-delay: 1400ms;
+}
+@keyframes fliptext {
+  80% {
+    transform: perspective(500px) rotate(0deg);
+    opacity: 1;
+  }
+  100% {
+    transform: translateY(-5vh);
+    text-shadow: 1vh 1vh 0 rgb(0, 255, 255), -0.5vh -0.5vh 0 rgb(250, 0, 255);
+    opacity: 1;
+  }
+}
+
+.start {
+  font-size: initial;
+  position: fixed;
+  left: 50%;
+  bottom: 5vh;
+  transform: translateX(-50%);
+  animation: langButton 5s forwards;
+  opacity: 0;
+}
+.start button {
+  font-size: 20px;
+  line-height: 1em;
+  width: 100px;
+  height: 100px;
+  color: #fafafa;
+  background-color: #121212;
+  margin: 0 10px;
+}
+.start button:hover {
+  cursor: pointer;
+}
+
+@keyframes langButton {
+  100% {
+    opacity: 1;
+  }
+}
 div.allSection {
   width: calc(100% - 120px);
 }
@@ -316,16 +394,21 @@ div.allSection:not(:nth-of-type(1)) {
 .sectionPortfolio section {
   margin-top: 40px;
 }
+.sectionPortfolio section h4 {
+  margin-top: 40px;
+}
 .sectionPortfolio section .galleryProjects ul {
   display: flex;
+  flex-wrap: wrap;
+  column-gap: 40px;
+  row-gap: 40px;
   margin-top: 40px;
 }
 .sectionPortfolio section .galleryProjects ul li {
-  width: 33.33%;
-  padding: 0 20px;
+  border: 1px solid #c0c0c0;
 }
 .sectionPortfolio section .galleryProjects ul li a img {
-  width: 100%;
+  height: 300px;
 }
 
 .sectionContact {
