--- a/scss/_sectionMain.scss
+++ b/scss/_sectionMain.scss
@@ -71,17 +71,22 @@ div.allSection {
   section {
     margin-top: 40px;
     // border: 1px solid red;
+    h4 {
+      margin-top: 40px;
+    }
     .galleryProjects {
       ul {
         display: flex;
+        // justify-content: space-around;
+        flex-wrap: wrap;
+        column-gap: 40px;
+        row-gap: 40px;
         margin-top: 40px;
         li {
-          width: 33.33%;
-          // border: 1px solid green;
-          padding: 0 20px;
+          border: 1px solid $gray-light;
           a {
             img {
-              width: 100%;
+              height: 300px;
             }
           }
         }
