--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -81,6 +81,7 @@ body {
   overflow: hidden;
   overflow-y: scroll;
   scrollbar-width: none;
+  scroll-behavior: smooth;
   &::-webkit-scrollbar {
     display: none;
   }
