--- a/scss/_mixVariables.scss
+++ b/scss/_mixVariables.scss
@@ -11,9 +11,12 @@ $yellow-hex: #faff00;
 $yellow-rgba: rgba(250, 255, 0, 1);
 $yellow-dark: rgba(230, 235, 0, 1);
 
+$text-black: #000;
 $text-dark: #313131;
 $text-dark2: rgba(0, 0, 0, 0.3);
-$text-light: #fafafa;
+$text-gray: #555;
+$text-white: #fff;
+$text-light: #eee;
 $text-light2: rgba(255, 255, 255, 0.7);
 
 $bg-white: #fdfdfd;
