--- a/scss/_reset.scss
+++ b/scss/_reset.scss
@@ -25,11 +25,6 @@ img {
   vertical-align: middle;
 }
 
-button {
-  font-family: "Inter", sans-serif;
-  font-size: 0.5em;
-  font-weight: 900;
-}
 p {
   font-family: "Inter", sans-serif;
   font-size: 24px;
@@ -39,6 +34,11 @@ li {
   font-family: "Inter", sans-serif;
   font-size: 0.8em;
   line-height: 1.2em;
+}
+button {
+  background-color: transparent;
+  color: inherit;
+  border: none;
 }
 
 h1,
@@ -54,7 +54,7 @@ h6 {
 }
 
 h1 {
-  font-size: 72px;
+  font-size: 8vh;
 }
 h2 {
   // font-size: 72px;
