--- a/scss/main.scss
+++ b/scss/main.scss
@@ -3,6 +3,7 @@
 @import "fonts.scss";
 @import "mixVariables.scss";
 @import "reset.scss";
+@import "bnw.scss";
 
 @import "index.scss";
 @import "menuBG.scss";
