--- a/scss/_menuBG.scss
+++ b/scss/_menuBG.scss
@@ -1,51 +1,72 @@
 // Menu - Hover, BG Patterns
+// Menu Btn Close
 #right {
-    position: absolute;
-    z-index: -10;
-    top: 0;left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #ffffff;
-    opacity: 0.3;
-    background: repeating-linear-gradient( 45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px );
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0.3;
+  background: repeating-linear-gradient(
+    45deg,
+    #c2c2c2,
+    #c2c2c2 2px,
+    #ffffff 2px,
+    #ffffff 10px
+  );
 }
 #left {
-    position: absolute;
-    z-index: -10;
-    top: 0; left: 0;
-    width: 100%; height: 100%;
-    background-color: #ffffff;
-    opacity: 0.3;
-    background: repeating-linear-gradient( -45deg, #c2c2c2, #c2c2c2 2px, #ffffff 2px, #ffffff 10px );
+  position: absolute;
+  z-index: -10;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: #ffffff;
+  opacity: 0.3;
+  background: repeating-linear-gradient(
+    -45deg,
+    #c2c2c2,
+    #c2c2c2 2px,
+    #ffffff 2px,
+    #ffffff 10px
+  );
 }
 
 .menu {
-    h2 {
-        a{
-            transition: text-shadow 0.1s linear, color 0.1s;
-        }
+  h2 {
+    a {
+      transition: text-shadow 0.1s linear, color 0.1s;
     }
-    #menu1{
-        &:hover{
-            color: $text-light2;
-            text-shadow: 
-                // 2px 2px 0px $text-dark,
-                20px 20px 0 $cyan-rgba, 
-                -20px -20px 0 $magenta-rgba;
-        }
+  }
+  #menu1 {
+    &:hover {
+      color: $text-black;
+      text-shadow: 0px 5px 0 $cyan-rgba;
     }
-    #menu2:hover{
-        color: $text-light2;
-        text-shadow: 
-            20px 20px 0 $magenta-rgba, 
-            -20px -20px 0 $yellow-rgba,
-            -19px -19px 0px $yellow-dark;
+  }
+  #menu2:hover {
+    color: $text-black;
+    text-shadow: 0px 5px 0 $magenta-rgba;
+  }
+  #menu3:hover {
+    color: $text-black;
+    text-shadow: 0px 5px 0 $yellow-rgba;
+  }
+}
+
+.btnClose {
+  position: absolute;
+  top: 40px;
+  right: 50px;
+  display: none;
+  i {
+    color: $text-dark;
+    cursor: pointer;
+    &:hover {
+      color: $text-black;
     }
-    #menu3:hover{
-        color: $text-light2;
-        text-shadow: 
-            20px 20px 0 $yellow-rgba, 
-            21px 21px 0px $yellow-dark,
-            -20px -20px 0 $cyan-rgba;
-    }
+  }
 }
